--- a/index.html
+++ b/index.html
@@ -3,24 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sua Empresa - Soluções com Drones e Luzes</title>
+    <title>DronyImagem - Filmagens Aéreas e Shows de Drones</title>
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚁</text></svg>"
+    />
   </head>
   <body>
     <header class="main-header">
       <div class="logo">
-        <a href="#">SUA EMPRESA</a>
+        <a href="#">
+          <img
+            src="logo-dronyimagem.png"
+            alt="DronyImagem Drone Solutions Logo"
+            class="header-logo"
+          />
+        </a>
       </div>
       <nav class="main-nav">
         <ul>
           <li><a href="#solucoes">Soluções</a></li>
           <li><a href="#portifolio">Portfólio</a></li>
           <li><a href="#sobre">Sobre Nós</a></li>
-          <li><a href="#contato" class="btn-contato">Contato</a></li>
+          <li><a href="#valores">Valores</a></li>
+          <li><a href="#missao">Missão</a></li>
         </ul>
       </nav>
       <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
@@ -29,11 +41,23 @@
     </header>
 
     <section class="hero-section">
+      <video
+        src="hero-video.mp4"
+        class="hero-video"
+        autoplay
+        muted
+        loop
+        playsinline
+      ></video>
+
       <div class="hero-content">
-        <h1>VOE ALTO.<br />CRIE VISÃO.</h1>
+        <h1>
+          Eleve o impacto visual do seu evento com tecnologia aérea de ponta.
+        </h1>
         <p>
-          Imagens aéreas e espetáculos de luzes com drones para eventos e
-          projetos únicos.
+          A DronyImagem é especialista em filmagem com drones, transmissão ao
+          vivo aérea e shows de drones com luzes, criando experiências únicas
+          que encantam o público e valorizam sua marca.
         </p>
         <a href="#solucoes" class="btn-principal">Descubra Nossas Soluções</a>
       </div>
@@ -41,125 +65,114 @@
 
     <section id="solucoes" class="solucoes-section">
       <div class="container">
-        <h2>NOSSAS SOLUÇÕES COM DRONES</h2>
+        <h2>🚁 NOSSOS SERVIÇOS</h2>
         <p class="subtitle">
-          Elevando a captação de imagem e a experiência de eventos a um novo
-          patamar.
+          (Subtítulo anterior removido, pois o novo conteúdo não tinha um. Se
+          quiser, podemos adicionar um novo aqui.)
         </p>
 
         <div class="solucoes-grid">
           <div class="solucao-item">
             <img
-              src="https://via.placeholder.com/60x60.svg?text=MAP"
-              alt="Ícone de Mapeamento"
-              class="solucao-icon"
+              src="image1.jpg"
+              alt="Filmagem Aérea Profissional"
+              class="solucao-imagem"
             />
-            <h3>Mapeamento e Inspeção Aérea</h3>
-            <p>
-              Captura de dados precisos para agricultura, construção e inspeções
-              industriais. Eficiência e segurança garantidas.
-            </p>
+            <div class="solucao-texto">
+              <h3>🎬 Filmagem Aérea Profissional</h3>
+              <p>
+                Capte cada detalhe do seu evento com uma filmagem com drone em
+                alta resolução. Ideal para shows, casamentos, eventos
+                corporativos, campanhas publicitárias e produções
+                institucionais. Nossos drones registram ângulos únicos que
+                destacam a grandiosidade e a energia do seu evento.
+              </p>
+            </div>
           </div>
-
           <div class="solucao-item">
             <img
-              src="https://via.placeholder.com/60x60.svg?text=LUZ"
-              alt="Ícone de Luzes"
-              class="solucao-icon"
+              src="image2.jpg"
+              alt="Transmissão Aérea Ao Vivo"
+              class="solucao-imagem"
             />
-            <h3>Shows de Luzes com Drones</h3>
-            <p>
-              Criação de espetáculos de luzes coreografados para grandes
-              eventos, lançamentos de produtos e celebrações memoráveis.
-            </p>
+            <div class="solucao-texto">
+              <h3>📡 Transmissão Aérea Ao Vivo</h3>
+              <p>
+                Surpreenda seu público com uma transmissão ao vivo feita por
+                drones, mostrando seu evento em tempo real com imagens estáveis
+                e de alta qualidade. Perfeito para festivais, feiras, eventos
+                esportivos e corporativos que precisam de impacto visual e
+                cobertura completa.
+              </p>
+            </div>
           </div>
-
           <div class="solucao-item">
             <img
-              src="https://via.placeholder.com/60x60.svg?text=VID"
-              alt="Ícone de Vídeo"
-              class="solucao-icon"
+              src="image3.jpg"
+              alt="Show de Drones com Luzes"
+              class="solucao-imagem"
             />
-            <h3>Produção Cinematográfica</h3>
-            <p>
-              Imagens aéreas de alta resolução com qualidade de cinema,
-              perfeitas para documentários, publicidade e filmes.
-            </p>
+            <div class="solucao-texto">
+              <h3>🌟 Show de Drones com Luzes</h3>
+              <p>
+                Encante o público com um show de drones sincronizados com luzes
+                e música. Perfeito para aberturas de eventos, ativações de
+                marca, inaugurações e celebrações especiais. Cada show é
+                planejado com roteiro, animações e coreografias exclusivas,
+                tornando o céu o palco principal do seu evento.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-
     <section id="portifolio" class="portifolio-section">
       <div class="container">
-        <h2>PROJETOS RECENTES</h2>
+        <h2>🎥 PORTFÓLIO / TRABALHO</h2>
         <p class="subtitle">
-          Uma amostra da nossa visão e excelência em cada trabalho realizado.
+          De filmagens aéreas a espetáculos de luzes com drones, a DronyImagem
+          já transformou eventos corporativos, festivais e produções
+          audiovisuais em experiências visuais únicas. Confira nossos projetos e
+          veja como nossas filmagens aéreas e shows de drones impactam o público
+          em cada detalhe.
         </p>
 
-        <div class="portifolio-grid">
-          <div class="portifolio-item">
-            <img
-              src="https://via.placeholder.com/400x300.svg?text=EVENTO+CORPORATIVO"
-              alt="Imagem do Projeto 1"
-            />
-            <div class="overlay">
-              <h4>Espetáculo de Abertura - Tech Summit 2024</h4>
-              <p>Shows de Luzes | Lisboa</p>
-            </div>
-          </div>
-          <div class="portifolio-item">
-            <img
-              src="https://via.placeholder.com/400x300.svg?text=INSPECAO+E+MAPA"
-              alt="Imagem do Projeto 2"
-            />
-            <div class="overlay">
-              <h4>Mapeamento 3D de Parque Eólico</h4>
-              <p>Inspeção Industrial | Nordeste</p>
-            </div>
-          </div>
-          <div class="portifolio-item">
-            <img
-              src="https://via.placeholder.com/400x300.svg?text=CENA+DE+FILME"
-              alt="Imagem do Projeto 3"
-            />
-            <div class="overlay">
-              <h4>Cenas Aéreas - Curta-Metragem "O Voo"</h4>
-              <p>Produção de Vídeo | Serra</p>
-            </div>
-          </div>
+        <div class="portifolio-cta-grid">
+          <a href="#" class="btn-principal">📸 Galeria de vídeos e fotos</a>
+          <a href="#" class="btn-principal"
+            >🛰️ Assista aos bastidores dos voos</a
+          >
         </div>
       </div>
     </section>
 
     <section id="sobre" class="sobre-section">
       <div class="container">
-        <h2>QUEM SOMOS</h2>
-        <p class="subtitle">
-          Pioneirismo e paixão por voar, transformando dados em visuais de tirar
-          o fôlego.
-        </p>
+        <h2>🧭 SOBRE NÓS</h2>
+        <p class="subtitle">Tecnologia, criatividade e inovação no ar</p>
 
         <div class="sobre-content">
           <div class="sobre-text">
             <p>
-              Fundada em 20XX, a SUA EMPRESA nasceu da união entre tecnologia de
-              ponta e criatividade. Somos especialistas em soluções aéreas,
-              utilizando frotas de drones de alta performance para captação de
-              imagens, mapeamento preciso e, principalmente, a criação de
-              espetáculos de luzes coreografados que redefinem eventos
-              corporativos e públicos.
+              Na DronyImagem, unimos filmagem aérea profissional, transmissão de
+              imagens ao vivo e shows de drones com luzes sincronizadas para
+              transformar eventos em experiências memoráveis.
             </p>
             <p>
-              Nossa missão é fornecer visuais únicos e dados aéreos de forma
-              segura e eficiente, garantindo que cada projeto atinja seu máximo
-              potencial. Acreditamos que o céu não é o limite, mas sim o nosso
-              palco.
+              Nossa equipe é formada por profissionais especializados em
+              audiovisual e pilotagem de drones, prontos para registrar cada
+              momento com qualidade cinematográfica, segurança e precisão
+              técnica.
+            </p>
+            <p>
+              Acreditamos que cada voo é uma oportunidade de contar uma nova
+              história — do alto, com emoção e impacto. Com a DronyImagem, o seu
+              evento ganha uma nova perspectiva e a visibilidade que ele merece.
             </p>
           </div>
           <div class="sobre-image">
             <img
-              src="https://via.placeholder.com/500x300.svg?text=VISAO+E+EQUIPE"
+              src="https://source.unsplash.com/500x300/?drone,technology"
               alt="Visão e Equipe da Empresa"
             />
           </div>
@@ -167,50 +180,57 @@
       </div>
     </section>
 
-    <section id="contato" class="contato-section">
+    <section id="valores" class="valores-section">
       <div class="container">
-        <h2>FALE CONOSCO</h2>
+        <h2>NOSSOS VALORES</h2>
         <p class="subtitle">
-          Pronto para tirar seu projeto do papel? Entre em contato e vamos voar
-          juntos!
+          Os princípios que guiam nossa visão e excelência em cada serviço.
         </p>
 
-        <div class="contato-content">
-          <form class="contato-form">
-            <input type="text" placeholder="Seu Nome Completo" required />
-            <input type="email" placeholder="Seu E-mail" required />
-            <input type="tel" placeholder="Telefone (Opcional)" />
-            <textarea
-              placeholder="Como podemos te ajudar? Descreva seu projeto ou dúvida."
-              rows="5"
-              required
-            ></textarea>
-            <button type="submit" class="btn-principal">Enviar Mensagem</button>
-          </form>
-
-          <div class="contato-info">
-            <h3>Detalhes de Contato</h3>
-            <p>E-mail: contato@suaempresa.com.br</p>
-            <p>Telefone: (XX) XXXX-XXXX</p>
-            <p>Endereço: Rua do Drone, 123, Cidade/UF</p>
-            <div class="social-links">
-              <a href="#" aria-label="LinkedIn"
-                ><img
-                  src="https://via.placeholder.com/30x30.svg?text=L"
-                  alt="LinkedIn"
-              /></a>
-              <a href="#" aria-label="Instagram"
-                ><img
-                  src="https://via.placeholder.com/30x30.svg?text=I"
-                  alt="Instagram"
-              /></a>
-              <a href="#" aria-label="YouTube"
-                ><img
-                  src="https://via.placeholder.com/30x30.svg?text=Y"
-                  alt="YouTube"
-              /></a>
-            </div>
+        <div class="valores-grid">
+          <div class="valor-item">
+            <h3>Experiências Memoráveis</h3>
+            <p>
+              Unimos tecnologia e criatividade para contar histórias do alto.
+              Transformamos seu evento em um espetáculo visual único que encanta
+              e gera emoção.
+            </p>
           </div>
+          <div class="valor-item">
+            <h3>Inovação e Tecnologia</h3>
+            <p>
+              Usamos tecnologia aérea de ponta—de shows de luzes a transmissões
+              ao vivo—para dar ao seu evento uma nova perspectiva e o impacto
+              visual que ele merece.
+            </p>
+          </div>
+          <div class="valor-item">
+            <h3>Qualidade e Segurança</h3>
+            <p>
+              Garantimos precisão técnica e qualidade cinematográfica em cada
+              voo. Nossa equipe especializada captura ângulos únicos com total
+              segurança, valorizando sua marca.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="missao" class="missao-section">
+      <div class="container">
+        <h2>NOSSA MISSÃO</h2>
+        <p class="subtitle">
+          Ser o elo entre o céu e a visão criativa, elevando a percepção e o
+          impacto dos seus projetos.
+        </p>
+
+        <div class="missao-content">
+          <p>
+            Nossa missão é transformar seu evento em um espetáculo visual
+            memorável. Usamos tecnologia aérea de ponta—de filmagens
+            cinematográficas a shows de luzes—para contar sua história do alto,
+            com segurança, criatividade e impacto.
+          </p>
         </div>
       </div>
     </section>
@@ -218,14 +238,24 @@
     <footer class="main-footer">
       <div class="container">
         <div class="footer-grid">
-          <div class="footer-logo">SUA EMPRESA</div>
+          <div class="footer-logo">
+            <a href="#">
+              <img
+                src="logo-dronyimagem.png"
+                alt="DronyImagem Drone Solutions Logo"
+                class="footer-logo-img"
+              />
+            </a>
+          </div>
+
           <div class="footer-links">
             <h4>Navegação</h4>
             <ul>
               <li><a href="#solucoes">Soluções</a></li>
               <li><a href="#portifolio">Portfólio</a></li>
               <li><a href="#sobre">Sobre Nós</a></li>
-              <li><a href="#contato">Contato</a></li>
+              <li><a href="#valores">Valores</a></li>
+              <li><a href="#missao">Missão</a></li>
             </ul>
           </div>
           <div class="footer-links">
@@ -238,13 +268,28 @@
         </div>
         <div class="footer-bottom">
           <p>
-            &copy; <span id="current-year"></span> SUA EMPRESA. Todos os
+            &copy; <span id="current-year"></span> DronyImagem. Todos os
             direitos reservados.
           </p>
           <p>Desenvolvido com paixão pela tecnologia aérea.</p>
         </div>
       </div>
     </footer>
+
+    <a
+      href="https://wa.me/5511999998888"
+      class="whatsapp-float"
+      target="_blank"
+      rel="noopener noreferrer"
+      aria-label="Conversar pelo WhatsApp"
+    >
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+        <path
+          fill="currentColor"
+          d="M380.9 97.1C339 55.1 283.2 32 223.9 32c-122.4 0-222 99.6-222 222 0 39.1 10.2 77.3 29.6 111L0 480l117.7-30.9c32.4 17.7 68.9 27.2 106.1 27.2h.1c122.3 0 221.9-99.6 221.9-222 0-59.3-23.1-115-64.8-156.7zM223.9 439.6c-33.8 0-66.3-9.1-94.7-25.7l-6.7-4-69.8 18.3L78 363.3l-4.4-7c-18.5-29.4-28.2-63.3-28.2-98.2 0-101.7 82.8-184.5 184.6-184.5 49.3 0 95.6 19.2 130.4 54.1 34.8 34.9 54.1 81.1 54.1 130.4 0 101.8-82.8 184.6-184.6 184.6zm101.2-138.2c-5.5-2.8-32.8-16.2-37.9-18-5.1-1.9-8.8-2.8-12.5 2.8-3.7 5.6-14.3 18-17.6 21.8-3.2 3.7-6.5 4.2-12 1.4-32.6-16.3-54-29.1-75.5-66-5.7-9.8 5.7-9.1 16.3-30.3 1.8-3.7.9-6.9-.5-9.7-1.4-2.8-12.5-30.1-17.1-41.2-4.5-10.8-9.1-9.3-12.5-9.5-3.2-.2-6.9-.2-10.6-.2-3.7 0-9.7 1.4-14.8 6.9-5.1 5.6-19.4 19-19.4 46.3 0 27.3 19.9 53.7 22.6 57.4 2.8 3.7 39.1 59.7 94.8 83.8 35.2 15.2 49 16.5 66.6 13.9 10.7-1.6 32.8-13.4 37.4-26.4 4.6-13 4.6-24.1 3.2-26.4-1.3-2.5-5-3.9-10.5-6.6z"
+        />
+      </svg>
+    </a>
 
     <script src="script.js"></script>
   </body>
