Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       rel="stylesheet"
     />
 
-    <link
-      rel="icon"
+    <link 
+      rel="icon" 
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚁</text></svg>"
-    />
+    >
   </head>
   <body>
     <header class="main-header">
@@ -51,9 +51,7 @@
       ></video>
 
       <div class="hero-content">
-        <h1>
-          Eleve o impacto visual do seu evento com tecnologia aérea de ponta.
-        </h1>
+        <h1>Eleve o impacto visual do seu evento com tecnologia aérea de ponta.</h1>
         <p>
           A DronyImagem é especialista em filmagem com drones, transmissão ao
           vivo aérea e shows de drones com luzes, criando experiências únicas
@@ -81,11 +79,11 @@
             <div class="solucao-texto">
               <h3>🎬 Filmagem Aérea Profissional</h3>
               <p>
-                Capte cada detalhe do seu evento com uma filmagem com drone em
-                alta resolução. Ideal para shows, casamentos, eventos
-                corporativos, campanhas publicitárias e produções
-                institucionais. Nossos drones registram ângulos únicos que
-                destacam a grandiosidade e a energia do seu evento.
+                Capte cada detalhe do seu evento com uma filmagem com drone em alta
+                resolução. Ideal para shows, casamentos, eventos corporativos,
+                campanhas publicitárias e produções institucionais. Nossos drones
+                registram ângulos únicos que destacam a grandiosidade e a energia
+                do seu evento.
               </p>
             </div>
           </div>
@@ -99,8 +97,8 @@
               <h3>📡 Transmissão Aérea Ao Vivo</h3>
               <p>
                 Surpreenda seu público com uma transmissão ao vivo feita por
-                drones, mostrando seu evento em tempo real com imagens estáveis
-                e de alta qualidade. Perfeito para festivais, feiras, eventos
+                drones, mostrando seu evento em tempo real com imagens estáveis e
+                de alta qualidade. Perfeito para festivais, feiras, eventos
                 esportivos e corporativos que precisam de impacto visual e
                 cobertura completa.
               </p>
@@ -115,30 +113,33 @@
             <div class="solucao-texto">
               <h3>🌟 Show de Drones com Luzes</h3>
               <p>
-                Encante o público com um show de drones sincronizados com luzes
-                e música. Perfeito para aberturas de eventos, ativações de
-                marca, inaugurações e celebrações especiais. Cada show é
-                planejado com roteiro, animações e coreografias exclusivas,
-                tornando o céu o palco principal do seu evento.
+                Encante o público com um show de drones sincronizados com luzes e
+                música. Perfeito para aberturas de eventos, ativações de marca,
+                inaugurações e celebrações especiais. Cada show é planejado com
+                roteiro, animações e coreografias exclusivas, tornando o céu o
+                palco principal do seu evento.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <section id="portifolio" class="portifolio-section">
       <div class="container">
         <h2>🎥 PORTFÓLIO / TRABALHO</h2>
         <p class="subtitle">
           De filmagens aéreas a espetáculos de luzes com drones, a DronyImagem
           já transformou eventos corporativos, festivais e produções
-          audiovisuais em experiências visuais únicas. Confira nossos projetos e
-          veja como nossas filmagens aéreas e shows de drones impactam o público
-          em cada detalhe.
+          audiovisuais em experiências visuais únicas. Confira nossos projetos
+          e veja como nossas filmagens aéreas e shows de drones impactam o
+          público em cada detalhe.
         </p>
 
         <div class="portifolio-cta-grid">
-          <a href="#" class="btn-principal">📸 Galeria de vídeos e fotos</a>
+          <a href="#" class="btn-principal"
+            >📸 Galeria de vídeos e fotos</a
+          >
           <a href="#" class="btn-principal"
             >🛰️ Assista aos bastidores dos voos</a
           >
@@ -166,20 +167,20 @@
             </p>
             <p>
               Acreditamos que cada voo é uma oportunidade de contar uma nova
-              história — do alto, com emoção e impacto. Com a DronyImagem, o seu
-              evento ganha uma nova perspectiva e a visibilidade que ele merece.
+              história — do alto, com emoção e impacto. Com a DronyImagem, o
+              seu evento ganha uma nova perspectiva e a visibilidade que ele
+              merece.
             </p>
           </div>
           <div class="sobre-image">
             <img
-              src="https://source.unsplash.com/500x300/?drone,technology"
-              alt="Visão e Equipe da Empresa"
+              src="image4.jpg"
+              alt="Equipe DronyImagem em campo"
             />
           </div>
         </div>
       </div>
     </section>
-
     <section id="valores" class="valores-section">
       <div class="container">
         <h2>NOSSOS VALORES</h2>
@@ -230,7 +231,7 @@
             memorável. Usamos tecnologia aérea de ponta—de filmagens
             cinematográficas a shows de luzes—para contar sua história do alto,
             com segurança, criatividade e impacto.
-          </p>
+          </f>
         </div>
       </div>
     </section>
@@ -247,7 +248,7 @@
               />
             </a>
           </div>
-
+          
           <div class="footer-links">
             <h4>Navegação</h4>
             <ul>
