Refactor CSS structure: Split styles into modular files for better organization and maintainability. Removed old style.css and created base, header, hero, sections, footer, components, and responsive stylesheets. Updated imports in the main style.css file.

--- a/index.html
+++ b/index.html
@@ -3,38 +3,78 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DronyImagem - Filmagens Aéreas e Shows de Drones</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <title>DronyImagem - Drone Solutions</title>
+    <meta
+      name="description"
+      content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
+    />
+    <meta
+      name="keywords"
+      content="drone, filmagem aérea, show de drones, drones luzes, filmagem com drone, mato grosso, cuiabá, dronyimagem"
+    />
+    <meta name="author" content="DronyImagem" />
+    <meta property="og:title" content="DronyImagem - Drone Solutions" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dronyimagem.com.br/" />
+    <meta
+      property="og:image"
+      content="https://mattzump.github.io/site-drones-empresa/image4.jpg"
+    />
+    <meta
+      property="og:description"
+      content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
+    />
+    <meta property="og:site_name" content="DronyImagem" />
+    <meta property="og:locale" content="pt_BR" />
+
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
 
-    <link 
-      rel="icon" 
+    <link
+      rel="icon"
       href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚁</text></svg>"
-    >
+    />
   </head>
   <body>
     <header class="main-header">
-      <div class="logo">
-        <a href="#">
-          <img
-            src="logo-dronyimagem.png"
-            alt="DronyImagem Drone Solutions Logo"
-            class="header-logo"
-          />
-        </a>
+      <div class="logo-text">
+        <a href="#">DronyImagem</a>
       </div>
+
       <nav class="main-nav">
         <ul>
           <li><a href="#solucoes">Soluções</a></li>
           <li><a href="#portifolio">Portfólio</a></li>
-          <li><a href="#sobre">Sobre Nós</a></li>
+          <li><a href="#sobre">Sobre</a></li>
           <li><a href="#valores">Valores</a></li>
           <li><a href="#missao">Missão</a></li>
+          <li>
+            <a
+              href="https://lumasky.show/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="btn-lumasky"
+            >
+              Lumasky
+            </a>
+          </li>
         </ul>
       </nav>
+
+      <div class="header-right-controls">
+        <div class="language-selector">
+          <a href="#" class="lang-active">🇧🇷 PT-BR</a>
+          <a href="#">🇺🇸 EN</a>
+          <a href="#">🇪🇸 ES</a>
+        </div>
+
+        <a href="#contato" class="btn-contato-header">Entre em Contato</a>
+      </div>
+
       <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
         &#9776;
       </button>
@@ -50,8 +90,15 @@
         playsinline
       ></video>
 
+      <img
+        src="logo-dronyimagem.png"
+        alt="DronyImagem Logo"
+        class="hero-logo"
+      />
+
       <div class="hero-content">
-        <h1>Eleve o impacto visual do seu evento com tecnologia aérea de ponta.</h1>
+        <h1>VOE ALTO<br />CRIE VISÃO</h1>
+
         <p>
           A DronyImagem é especialista em filmagem com drones, transmissão ao
           vivo aérea e shows de drones com luzes, criando experiências únicas
@@ -79,11 +126,11 @@
             <div class="solucao-texto">
               <h3>🎬 Filmagem Aérea Profissional</h3>
               <p>
-                Capte cada detalhe do seu evento com uma filmagem com drone em alta
-                resolução. Ideal para shows, casamentos, eventos corporativos,
-                campanhas publicitárias e produções institucionais. Nossos drones
-                registram ângulos únicos que destacam a grandiosidade e a energia
-                do seu evento.
+                Capte cada detalhe do seu evento com uma filmagem com drone em
+                alta resolução. Ideal para shows, casamentos, eventos
+                corporativos, campanhas publicitárias e produções
+                institucionais. Nossos drones registram ângulos únicos que
+                destacam a grandiosidade e a energia do seu evento.
               </p>
             </div>
           </div>
@@ -97,8 +144,8 @@
               <h3>📡 Transmissão Aérea Ao Vivo</h3>
               <p>
                 Surpreenda seu público com uma transmissão ao vivo feita por
-                drones, mostrando seu evento em tempo real com imagens estáveis e
-                de alta qualidade. Perfeito para festivais, feiras, eventos
+                drones, mostrando seu evento em tempo real com imagens estáveis
+                e de alta qualidade. Perfeito para festivais, feiras, eventos
                 esportivos e corporativos que precisam de impacto visual e
                 cobertura completa.
               </p>
@@ -113,11 +160,11 @@
             <div class="solucao-texto">
               <h3>🌟 Show de Drones com Luzes</h3>
               <p>
-                Encante o público com um show de drones sincronizados com luzes e
-                música. Perfeito para aberturas de eventos, ativações de marca,
-                inaugurações e celebrações especiais. Cada show é planejado com
-                roteiro, animações e coreografias exclusivas, tornando o céu o
-                palco principal do seu evento.
+                Encante o público com um show de drones sincronizados com luzes
+                e música. Perfeito para aberturas de eventos, ativações de
+                marca, inaugurações e celebrações especiais. Cada show é
+                planejado com roteiro, animações e coreografias exclusivas,
+                tornando o céu o palco principal do seu evento.
               </p>
             </div>
           </div>
@@ -131,15 +178,13 @@
         <p class="subtitle">
           De filmagens aéreas a espetáculos de luzes com drones, a DronyImagem
           já transformou eventos corporativos, festivais e produções
-          audiovisuais em experiências visuais únicas. Confira nossos projetos
-          e veja como nossas filmagens aéreas e shows de drones impactam o
-          público em cada detalhe.
+          audiovisuais em experiências visuais únicas. Confira nossos projetos e
+          veja como nossas filmagens aéreas e shows de drones impactam o público
+          em cada detalhe.
         </p>
 
         <div class="portifolio-cta-grid">
-          <a href="#" class="btn-principal"
-            >📸 Galeria de vídeos e fotos</a
-          >
+          <a href="#" class="btn-principal">📸 Galeria de vídeos e fotos</a>
           <a href="#" class="btn-principal"
             >🛰️ Assista aos bastidores dos voos</a
           >
@@ -149,7 +194,7 @@
 
     <section id="sobre" class="sobre-section">
       <div class="container">
-        <h2>🧭 SOBRE NÓS</h2>
+        <h2>🧭 SOBRE</h2>
         <p class="subtitle">Tecnologia, criatividade e inovação no ar</p>
 
         <div class="sobre-content">
@@ -167,20 +212,17 @@
             </p>
             <p>
               Acreditamos que cada voo é uma oportunidade de contar uma nova
-              história — do alto, com emoção e impacto. Com a DronyImagem, o
-              seu evento ganha uma nova perspectiva e a visibilidade que ele
-              merece.
+              história — do alto, com emoção e impacto. Com a DronyImagem, o seu
+              evento ganha uma nova perspectiva e a visibilidade que ele merece.
             </p>
           </div>
           <div class="sobre-image">
-            <img
-              src="image4.jpg"
-              alt="Equipe DronyImagem em campo"
-            />
+            <img src="image4.jpg" alt="Equipe DronyImagem em campo" />
           </div>
         </div>
       </div>
     </section>
+
     <section id="valores" class="valores-section">
       <div class="container">
         <h2>NOSSOS VALORES</h2>
@@ -231,7 +273,7 @@
             memorável. Usamos tecnologia aérea de ponta—de filmagens
             cinematográficas a shows de luzes—para contar sua história do alto,
             com segurança, criatividade e impacto.
-          </f>
+          </p>
         </div>
       </div>
     </section>
@@ -248,13 +290,13 @@
               />
             </a>
           </div>
-          
+
           <div class="footer-links">
             <h4>Navegação</h4>
             <ul>
               <li><a href="#solucoes">Soluções</a></li>
               <li><a href="#portifolio">Portfólio</a></li>
-              <li><a href="#sobre">Sobre Nós</a></li>
+              <li><a href="#sobre">Sobre</a></li>
               <li><a href="#valores">Valores</a></li>
               <li><a href="#missao">Missão</a></li>
             </ul>
