feat: Implement translation functionality and update language files
- Added translation logic to dynamically load and apply language-specific content from JSON files.
- Created English (en.json) and Spanish (es.json) translation files with corresponding keys and values.
- Updated index.html to include data attributes for translation keys.
- Enhanced script.js to handle language switching and initial loading of translations.
- Modified footer and contact sections in HTML for better accessibility and usability.
- Improved CSS styles for footer and sections to enhance layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>DronyImagem - Drone Solutions</title>
+    <title data-translate-key="pageTitle">DronyImagem - Drone Solutions</title>
     <meta
       name="description"
+      data-translate-key="metaDescription"
       content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
     />
     <meta
       name="keywords"
+      data-translate-key="metaKeywords"
       content="drone, filmagem aérea, show de drones, drones luzes, filmagem com drone, mato grosso, cuiabá, dronyimagem"
     />
     <meta name="author" content="DronyImagem" />
-    <meta property="og:title" content="DronyImagem - Drone Solutions" />
+    <meta
+      property="og:title"
+      data-translate-key="ogTitle"
+      content="DronyImagem - Drone Solutions"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://dronyimagem.com.br/" />
     <meta
@@ -23,9 +29,14 @@
     />
     <meta
       property="og:description"
+      data-translate-key="ogDescription"
       content="Especialistas em filmagem com drones, transmissão ao vivo aérea e shows de drones com luzes. Transforme seu evento em um espetáculo visual."
     />
-    <meta property="og:site_name" content="DronyImagem" />
+    <meta
+      property="og:site_name"
+      data-translate-key="ogSiteName"
+      content="DronyImagem"
+    />
     <meta property="og:locale" content="pt_BR" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -42,22 +53,29 @@
   <body>
     <header class="main-header">
       <div class="logo-text">
-        <a href="#">DronyImagem</a>
+        <a href="#" data-translate-key="headerLogo">DronyImagem</a>
       </div>
 
       <nav class="main-nav">
         <ul>
-          <li><a href="#solucoes">Soluções</a></li>
-          <li><a href="#portifolio">Portfólio</a></li>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#valores">Valores</a></li>
-          <li><a href="#missao">Missão</a></li>
+          <li>
+            <a href="#solucoes" data-translate-key="navSolutions">Soluções</a>
+          </li>
+          <li>
+            <a href="#portifolio" data-translate-key="navPortfolio"
+              >Portfólio</a
+            >
+          </li>
+          <li><a href="#sobre" data-translate-key="navAbout">Sobre</a></li>
+          <li><a href="#valores" data-translate-key="navValues">Valores</a></li>
+          <li><a href="#missao" data-translate-key="navMission">Missão</a></li>
           <li>
             <a
               href="https://lumasky.show/"
               target="_blank"
               rel="noopener noreferrer"
               class="btn-lumasky"
+              data-translate-key="navLumasky"
             >
               Lumasky
             </a>
@@ -67,12 +85,19 @@
 
       <div class="header-right-controls">
         <div class="language-selector">
-          <a href="#" class="lang-active">🇧🇷 PT-BR</a>
-          <a href="#">🇺🇸 EN</a>
-          <a href="#">🇪🇸 ES</a>
+          <a href="#" class="lang-link lang-active" data-lang="pt-br"
+            >🇧🇷 PT-BR</a
+          >
+          <a href="#" class="lang-link" data-lang="en">🇺🇸 EN</a>
+          <a href="#" class="lang-link" data-lang="es">🇪🇸 ES</a>
         </div>
 
-        <a href="#contato" class="btn-contato-header">Entre em Contato</a>
+        <a
+          href="#contato"
+          class="btn-contato-header"
+          data-translate-key="navContact"
+          >Entre em Contato</a
+        >
       </div>
 
       <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
@@ -97,23 +122,26 @@
       />
 
       <div class="hero-content">
-        <h1>VOE ALTO<br />CRIE VISÃO</h1>
-
-        <p>
+        <h1 data-translate-key="heroTitle">VOE ALTO<br />CRIE VISÃO</h1>
+        <p data-translate-key="heroSubtitle">
           A DronyImagem é especialista em filmagem com drones, transmissão ao
           vivo aérea e shows de drones com luzes, criando experiências únicas
           que encantam o público e valorizam sua marca.
         </p>
-        <a href="#solucoes" class="btn-principal">Descubra Nossas Soluções</a>
+        <a
+          href="#solucoes"
+          class="btn-principal"
+          data-translate-key="heroButton"
+          >Descubra Nossas Soluções</a
+        >
       </div>
     </section>
 
     <section id="solucoes" class="solucoes-section">
       <div class="container">
-        <h2>🚁 NOSSOS SERVIÇOS</h2>
-        <p class="subtitle">
-          (Subtítulo anterior removido, pois o novo conteúdo não tinha um. Se
-          quiser, podemos adicionar um novo aqui.)
+        <h2 data-translate-key="servicesTitle">🚁 NOSSOS SERVIÇOS</h2>
+        <p class="subtitle" data-translate-key="servicesSubtitle">
+          Do céu ao seu público: filmagem, transmissão e espetáculos.
         </p>
 
         <div class="solucoes-grid">
@@ -124,8 +152,10 @@
               class="solucao-imagem"
             />
             <div class="solucao-texto">
-              <h3>🎬 Filmagem Aérea Profissional</h3>
-              <p>
+              <h3 data-translate-key="service1Title">
+                🎬 Filmagem Aérea Profissional
+              </h3>
+              <p data-translate-key="service1Desc">
                 Capte cada detalhe do seu evento com uma filmagem com drone em
                 alta resolução. Ideal para shows, casamentos, eventos
                 corporativos, campanhas publicitárias e produções
@@ -141,8 +171,10 @@
               class="solucao-imagem"
             />
             <div class="solucao-texto">
-              <h3>📡 Transmissão Aérea Ao Vivo</h3>
-              <p>
+              <h3 data-translate-key="service2Title">
+                📡 Transmissão Aérea Ao Vivo
+              </h3>
+              <p data-translate-key="service2Desc">
                 Surpreenda seu público com uma transmissão ao vivo feita por
                 drones, mostrando seu evento em tempo real com imagens estáveis
                 e de alta qualidade. Perfeito para festivais, feiras, eventos
@@ -151,15 +183,17 @@
               </p>
             </div>
           </div>
-          <div class="solucao-item">
+          <div class="solucao-item solucao-item-link">
             <img
               src="image3.jpg"
               alt="Show de Drones com Luzes"
               class="solucao-imagem"
             />
             <div class="solucao-texto">
-              <h3>🌟 Show de Drones com Luzes</h3>
-              <p>
+              <h3 data-translate-key="service3Title">
+                🌟 Show de Drones com Luzes
+              </h3>
+              <p data-translate-key="service3Desc">
                 Encante o público com um show de drones sincronizados com luzes
                 e música. Perfeito para aberturas de eventos, ativações de
                 marca, inaugurações e celebrações especiais. Cada show é
@@ -167,6 +201,13 @@
                 tornando o céu o palco principal do seu evento.
               </p>
             </div>
+            <a
+              href="https://lumasky.show/"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="card-link-overlay"
+              aria-label="Saiba mais sobre shows com Lumasky (link externo)"
+            ></a>
           </div>
         </div>
       </div>
@@ -174,8 +215,8 @@
 
     <section id="portifolio" class="portifolio-section">
       <div class="container">
-        <h2>🎥 PORTFÓLIO / TRABALHO</h2>
-        <p class="subtitle">
+        <h2 data-translate-key="portfolioTitle">🎥 PORTFÓLIO / TRABALHO</h2>
+        <p class="subtitle" data-translate-key="portfolioSubtitle">
           De filmagens aéreas a espetáculos de luzes com drones, a DronyImagem
           já transformou eventos corporativos, festivais e produções
           audiovisuais em experiências visuais únicas. Confira nossos projetos e
@@ -184,9 +225,17 @@
         </p>
 
         <div class="portifolio-cta-grid">
-          <a href="#" class="btn-principal">📸 Galeria de vídeos e fotos</a>
-          <a href="#" class="btn-principal"
-            >🛰️ Assista aos bastidores dos voos</a
+          <a
+            href="#"
+            class="btn-principal"
+            data-translate-key="portfolioBtnPhotos"
+            >📸 Galeria de Fotos</a
+          >
+          <a
+            href="#"
+            class="btn-principal"
+            data-translate-key="portfolioBtnVideos"
+            >🎬 Galeria de Vídeos</a
           >
         </div>
       </div>
@@ -194,23 +243,30 @@
 
     <section id="sobre" class="sobre-section">
       <div class="container">
-        <h2>🧭 SOBRE</h2>
-        <p class="subtitle">Tecnologia, criatividade e inovação no ar</p>
+        <h2 data-translate-key="aboutTitle">🧭 SOBRE</h2>
+        <p class="subtitle" data-translate-key="aboutSubtitle">
+          Tecnologia, criatividade e inovação no ar
+        </p>
+
+        <p class="sobre-intro" data-translate-key="aboutIntro">
+          Criado por dois irmãos matogrossenses ficcionados em tecnologia e
+          apaixonados por constante evoulução.
+        </p>
 
         <div class="sobre-content">
           <div class="sobre-text">
-            <p>
+            <p data-translate-key="aboutP1">
               Na DronyImagem, unimos filmagem aérea profissional, transmissão de
               imagens ao vivo e shows de drones com luzes sincronizadas para
               transformar eventos em experiências memoráveis.
             </p>
-            <p>
+            <p data-translate-key="aboutP2">
               Nossa equipe é formada por profissionais especializados em
               audiovisual e pilotagem de drones, prontos para registrar cada
               momento com qualidade cinematográfica, segurança e precisão
               técnica.
             </p>
-            <p>
+            <p data-translate-key="aboutP3">
               Acreditamos que cada voo é uma oportunidade de contar uma nova
               história — do alto, com emoção e impacto. Com a DronyImagem, o seu
               evento ganha uma nova perspectiva e a visibilidade que ele merece.
@@ -225,31 +281,31 @@
 
     <section id="valores" class="valores-section">
       <div class="container">
-        <h2>NOSSOS VALORES</h2>
-        <p class="subtitle">
+        <h2 data-translate-key="valuesTitle">NOSSOS VALORES</h2>
+        <p class="subtitle" data-translate-key="valuesSubtitle">
           Os princípios que guiam nossa visão e excelência em cada serviço.
         </p>
 
         <div class="valores-grid">
           <div class="valor-item">
-            <h3>Experiências Memoráveis</h3>
-            <p>
+            <h3 data-translate-key="value1Title">Experiências Memoráveis</h3>
+            <p data-translate-key="value1Desc">
               Unimos tecnologia e criatividade para contar histórias do alto.
               Transformamos seu evento em um espetáculo visual único que encanta
               e gera emoção.
             </p>
           </div>
           <div class="valor-item">
-            <h3>Inovação e Tecnologia</h3>
-            <p>
+            <h3 data-translate-key="value2Title">Inovação e Tecnologia</h3>
+            <p data-translate-key="value2Desc">
               Usamos tecnologia aérea de ponta—de shows de luzes a transmissões
               ao vivo—para dar ao seu evento uma nova perspectiva e o impacto
               visual que ele merece.
             </p>
           </div>
           <div class="valor-item">
-            <h3>Qualidade e Segurança</h3>
-            <p>
+            <h3 data-translate-key="value3Title">Qualidade e Segurança</h3>
+            <p data-translate-key="value3Desc">
               Garantimos precisão técnica e qualidade cinematográfica em cada
               voo. Nossa equipe especializada captura ângulos únicos com total
               segurança, valorizando sua marca.
@@ -261,18 +317,71 @@
 
     <section id="missao" class="missao-section">
       <div class="container">
-        <h2>NOSSA MISSÃO</h2>
-        <p class="subtitle">
+        <h2 data-translate-key="missionTitle">NOSSA MISSÃO</h2>
+        <p class="subtitle" data-translate-key="missionSubtitle">
           Ser o elo entre o céu e a visão criativa, elevando a percepção e o
           impacto dos seus projetos.
         </p>
 
         <div class="missao-content">
-          <p>
+          <p data-translate-key="missionDesc">
             Nossa missão é transformar seu evento em um espetáculo visual
             memorável. Usamos tecnologia aérea de ponta—de filmagens
             cinematográficas a shows de luzes—para contar sua história do alto,
             com segurança, criatividade e impacto.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="contato" class="contato-section">
+      <div class="container">
+        <h2 data-translate-key="contactTitle">ENTRE EM CONTATO</h2>
+        <p class="subtitle" data-translate-key="contactSubtitle">
+          Vamos conversar sobre o seu próximo projeto aéreo!
+        </p>
+
+        <form action="#" method="POST" class="contato-form">
+          <div class="form-group">
+            <label for="nome" data-translate-key="formName">Nome:</label>
+            <input type="text" id="nome" name="nome" required />
+          </div>
+          <div class="form-group">
+            <label for="email" data-translate-key="formEmail">Email:</label>
+            <input type="email" id="email" name="email" required />
+          </div>
+          <div class="form-group">
+            <label for="mensagem" data-translate-key="formMessage"
+              >Mensagem:</label
+            >
+            <textarea
+              id="mensagem"
+              name="mensagem"
+              rows="5"
+              required
+            ></textarea>
+          </div>
+          <button
+            type="submit"
+            class="btn-principal btn-submit"
+            data-translate-key="formSubmit"
+          >
+            Enviar Mensagem
+          </button>
+        </form>
+
+        <div class="contato-info-alternativa">
+          <p data-translate-key="contactAltText">
+            Ou fale conosco diretamente:
+          </p>
+          <p>
+            📞 <a href="tel:+5565999396490">+55 65 99939-6490</a> (WhatsApp)
+          </p>
+          <p>
+            ✉️
+            <a href="mailto:contato@dronyimagem.com.br"
+              >contato@dronyimagem.com.br</a
+            >
           </p>
         </div>
       </div>
@@ -292,35 +401,70 @@
           </div>
 
           <div class="footer-links">
-            <h4>Navegação</h4>
+            <h4 data-translate-key="footerNav">Navegação</h4>
             <ul>
-              <li><a href="#solucoes">Soluções</a></li>
-              <li><a href="#portifolio">Portfólio</a></li>
-              <li><a href="#sobre">Sobre</a></li>
-              <li><a href="#valores">Valores</a></li>
-              <li><a href="#missao">Missão</a></li>
+              <li>
+                <a href="#solucoes" data-translate-key="navSolutions"
+                  >Soluções</a
+                >
+              </li>
+              <li>
+                <a href="#portifolio" data-translate-key="navPortfolio"
+                  >Portfólio</a
+                >
+              </li>
+              <li><a href="#sobre" data-translate-key="navAbout">Sobre</a></li>
+              <li>
+                <a href="#valores" data-translate-key="navValues">Valores</a>
+              </li>
+              <li>
+                <a href="#missao" data-translate-key="navMission">Missão</a>
+              </li>
             </ul>
           </div>
+
           <div class="footer-links">
-            <h4>Legal</h4>
+            <h4 data-translate-key="footerLegal">Legal</h4>
             <ul>
-              <li><a href="#">Termos de Serviço</a></li>
-              <li><a href="#">Política de Privacidade</a></li>
+              <li>
+                <a href="#" data-translate-key="footerTerms"
+                  >Termos de Serviço</a
+                >
+              </li>
+              <li>
+                <a href="#" data-translate-key="footerPrivacy"
+                  >Política de Privacidade</a
+                >
+              </li>
             </ul>
+          </div>
+
+          <div class="footer-contact-cta">
+            <a
+              href="#contato"
+              class="btn-principal btn-contato-footer"
+              data-translate-key="navContact"
+              >Entre em Contato</a
+            >
           </div>
         </div>
+
         <div class="footer-bottom">
           <p>
-            &copy; <span id="current-year"></span> DronyImagem. Todos os
-            direitos reservados.
+            &copy; <span id="current-year"></span> DronyImagem.
+            <span data-translate-key="footerRights"
+              >Todos os direitos reservados.</span
+            >
           </p>
-          <p>Desenvolvido com paixão pela tecnologia aérea.</p>
+          <p data-translate-key="footerDev">
+            Desenvolvido com paixão pela tecnologia aérea.
+          </p>
         </div>
       </div>
     </footer>
 
     <a
-      href="https://wa.me/5511999998888"
+      href="https://wa.me/5565999396490"
       class="whatsapp-float"
       target="_blank"
       rel="noopener noreferrer"
