feat: Update header layout to use flexbox for better alignment; add favicon and improve mobile navigation

--- a/index.html
+++ b/index.html
@@ -34,62 +34,80 @@
       rel="stylesheet"
     />
 
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚁</text></svg>"
-    />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <header class="main-header">
-      <div class="logo-text">
-        <a href="#">DronyImagem</a>
-      </div>
+      <div class="container header-container">
+        <div class="logo-text">
+          <a href="#">DronyImagem</a>
+        </div>
 
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <a href="#solucoes" data-translate-key="navSolutions">Soluções</a>
-          </li>
-          <li>
-            <a href="#portifolio" data-translate-key="navPortfolio"
-              >Portfólio</a
-            >
-          </li>
-          <li><a href="#sobre" data-translate-key="navAbout">Sobre</a></li>
-          <li><a href="#valores" data-translate-key="navValues">Valores</a></li>
-          <li><a href="#missao" data-translate-key="navMission">Missão</a></li>
-          <li>
-            <a
-              href="https://lumasky.show/"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="btn-lumasky"
-              data-translate-key="navLumasky"
-            >
-              Lumasky
-            </a>
-          </li>
-          <li class="language-selector-li">
-            <div class="language-selector">
-              <a href="#" class="lang-link lang-active" data-lang="pt-br"
-                >🇧🇷 PT-BR</a
+        <nav class="main-nav">
+          <ul>
+            <li>
+              <a href="#solucoes" data-translate-key="navSolutions">Soluções</a>
+            </li>
+            <li>
+              <a href="#portifolio" data-translate-key="navPortfolio"
+                >Portfólio</a
               >
-              <a href="#" class="lang-link" data-lang="en">🇺🇸 EN</a>
-              <a href="#" class="lang-link" data-lang="es">🇪🇸 ES</a>
-            </div>
-          </li>
-          <li class="nav-contact-button-li">
-            <a
-              href="#contato"
-              class="btn-contato-header"
-              data-translate-key="navContact"
-              >Entre em Contato</a
-            >
-          </li>
-        </ul>
-      </nav>
+            </li>
+            <li><a href="#sobre" data-translate-key="navAbout">Sobre</a></li>
+            <li>
+              <a href="#valores" data-translate-key="navValues">Valores</a>
+            </li>
+            <li>
+              <a href="#missao" data-translate-key="navMission">Missão</a>
+            </li>
+            <li>
+              <a
+                href="https://lumasky.show/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="btn-lumasky"
+                data-translate-key="navLumasky"
+              >
+                Lumasky
+              </a>
+            </li>
+            <li class="language-selector-li mobile-only">
+              <div class="language-selector">
+                <a href="#" class="lang-link lang-active" data-lang="pt-br"
+                  >🇧🇷 PT-BR</a
+                >
+                <a href="#" class="lang-link" data-lang="en">🇺🇸 EN</a>
+                <a href="#" class="lang-link" data-lang="es">🇪🇸 ES</a>
+              </div>
+            </li>
+            <li class="nav-contact-button-li mobile-only">
+              <a
+                href="#contato"
+                class="btn-contato-header"
+                data-translate-key="navContact"
+                >Entre em Contato</a
+              >
+            </li>
+          </ul>
+        </nav>
 
-      <div class="header-right-controls"></div>
+        <div class="header-right-controls desktop-only">
+          <div class="language-selector">
+            <a href="#" class="lang-link lang-active" data-lang="pt-br"
+              >🇧🇷 PT-BR</a
+            >
+            <a href="#" class="lang-link" data-lang="en">🇺🇸 EN</a>
+            <a href="#" class="lang-link" data-lang="es">🇪🇸 ES</a>
+          </div>
+          <a
+            href="#contato"
+            class="btn-contato-header"
+            data-translate-key="navContact"
+            >Entre em Contato</a
+          >
+        </div>
+      </div>
 
       <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">
         &#9776;
@@ -165,7 +183,7 @@
               <p data-translate-key="service2Desc">
                 Surpreenda seu público com uma transmissão ao vivo feita por
                 drones, mostrando seu evento em tempo real com imagens estáveis
-                e de alta qualidade. Perfeito para festivais, ferias, eventos
+                e de alta qualidade. Perfeito para festivais, feiras, eventos
                 esportivos e corporativos que precisam de impacto visual e
                 cobertura completa.
               </p>
@@ -309,7 +327,7 @@
         <div class="missao-content">
           <p data-translate-key="missionDesc">
             Nossa missão é transformar seu evento em um espetáculo visual
-            memorável. Usamos tecnologia aérea de ponta—de filmagens
+            memorable. Usamos tecnologia aérea de ponta—de filmagens
             cinematográficas a shows de luzes—para contar sua história do alto,
             com segurança, criatividade e impacto.
           </p>
